--- a/ktor-tutorial/.gitignore
+++ b/ktor-tutorial/.gitignore
@@ -1,36 +1,101 @@
-.gradle
+# ========================
+# Gradle / Kotlin / Ktor
+# ========================
+.gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### STS ###
-.apt_generated
+# ========================
+# Node / React / JavaScript
+# ========================
+# Node modules
+node_modules/
+# npm logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+# production build
+dist/
+build/
+# local env
+.env
+.env.local
+.env.*.local
+# Parcel / Vite / Next.js cache
+.cache/
+.vite/
+.next/
+out/
+
+# ========================
+# Eclipse / STS
+# ========================
+.apt_generated/
 .classpath
 .factorypath
 .project
-.settings
+.settings/
 .springBeans
-.sts4-cache
+.sts4-cache/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
-### IntelliJ IDEA ###
-.idea
+# ========================
+# IntelliJ IDEA
+# ========================
+.idea/
 *.iws
 *.iml
 *.ipr
 out/
+*.log
+*.tmp
+*.bak
+.gradle/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
-### NetBeans ###
+# ========================
+# NetBeans
+# ========================
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 
-### VS Code ###
+# ========================
+# VS Code
+# ========================
 .vscode/
+
+# ========================
+# OS Files
+# ========================
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Linux
+*~
+.nfs*
+
+# ========================
+# Logs and temp files
+# ========================
+*.log
+*.tmp
+*.bak
+*.swp
+*.swo
